<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient2"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_80sdp"
        android:textColor="#fff"
        android:textSize="@dimen/_25ssp"
        android:fontFamily="@font/lobster"
        android:text="Instagram"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:background="@drawable/et_bg"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColor="#fff"
        android:padding="@dimen/_10sdp"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout"
        app:passwordToggleEnabled="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        app:hintEnabled="false"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#fff"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#fff"
            android:background="@drawable/et_bg"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:padding="@dimen/_10sdp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@drawable/gradient3"
        android:text="@string/login_now"
        android:textAllCaps="false"
        android:textColor="@color/login_form_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/don_t_remember_password"
        android:textColor="@color/login_form_details"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />


    <LinearLayout
        android:id="@+id/fb_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/footer_line"
        app:layout_constraintTop_toBottomOf="@+id/or">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_icons8_facebook"
            />

        <TextView
            android:id="@+id/facebook_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_with_facebook"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:textColor="@color/login_form_details"
            android:textStyle="bold"/>

    </LinearLayout>



    <View
        android:id="@+id/line1"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="1dp"
        android:background="@color/login_form_details_medium"
        app:layout_constraintBottom_toBottomOf="@+id/or"
        app:layout_constraintEnd_toStartOf="@+id/or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/or" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:textColor="@color/login_form_details"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/fb_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password" />
    <View
        android:id="@+id/line2"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="1dp"
        android:background="@color/login_form_details_medium"
        app:layout_constraintBottom_toBottomOf="@+id/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/or"
        app:layout_constraintTop_toTopOf="@+id/or" />


    <View
        android:id="@+id/footer_line"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/_50sdp"
        android:background="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_an_account"
        android:textColor="@color/login_form_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/footer_line" />




</androidx.constraintlayout.widget.ConstraintLayout>

